Added correct source URL to Debian copyright file; Corrected upstream name
--HG--
extra : amend_source : bcb64c8a6fe4cd75f598e9937e8dad966bc3f69d

--- a/debian/man/make-eclipsepkg.1
+++ b/debian/man/make-eclipsepkg.1
@@ -1,7 +1,7 @@
 .TH make-eclipsepkg 1 "May 2017" "" "Eclipse Packer"
 
 .SH NAME
-\fBmake-eclipsepkg\fP - Builds Debian package from Eclipse binary distribution
+make-eclipsepkg \- Builds Debian package from Eclipse binary distribution
 
 .SH SYNOPSIS
 .nf
